# NovusCore-Tools

./: .gitmodules  CMakeLists.txt
cmake/templates/: CSharp.csproj.template
converter/: CMakeLists.txt
converter/Source/: Program.cs
converter/Source/Converters/: BaseConverter.cs
converter/Source/Converters/FontCopier/: FontCopier.cs
converter/Source/Converters/ObjToNModel/: ObjToNModel.cs
converter/Source/Converters/TextureCopier/: TextureCopier.cs
dep/: CMakeLists.txt
dep/NvidiaTextureTools/: CMakeLists.txt  LICENSE
dep/NvidiaTextureTools/src/bc6h/: CMakeLists.txt
dep/NvidiaTextureTools/src/bc7/: CMakeLists.txt
dep/NvidiaTextureTools/src/nvcore/: CMakeLists.txt  Debug.cpp  Library.cpp  Timer.cpp
extractor/: CMakeLists.txt  GlobalData.h  main.cpp
extractor/BLP/BLP2PNG/: BlpConvert.cpp  BlpConvert.h
extractor/DBC/: DBCLoader.h  DBCReader.cpp  DBCReader.h  DBCStructures.h
extractor/Extractors/: DBCExtractor.cpp  DBCExtractor.h  M2Extractor.cpp  M2Extractor.h  MapExtractor.cpp  MapExtractor.h  TextureExtractor.cpp  TextureExtractor.h
extractor/FileChunk/: ChunkLoader.cpp  ChunkLoader.h
extractor/FileChunk/Chunks/: ChunkHeader.h  MVER.cpp  MVER.h
extractor/FileChunk/Wrappers/: ADT.cpp  ADT.h  WDT.h  WMO_Object.cpp  WMO_Object.h  WMO_Root.cpp  WMO_Root.h
extractor/Formats/BLP/: BlpConvert.cpp
extractor/Formats/DBC/: Structures.h
extractor/Formats/FileChunk/: FileChunkLoader.cpp  FileChunkLoader.h
extractor/Formats/M2/: ComplexModel.cpp  ComplexModel.h  M2.cpp  M2.h
extractor/Formats/MAP/: Cell.h  Chunk.h  MapHeader.h  MapObject.h  MapObjectRoot.h
extractor/Interface/: InterfaceLoader.cpp  InterfaceLoader.h
extractor/M2/: M2.cpp  M2.h
extractor/MAP/: ADT.cpp  ADT.h  ADTStructs.h  Cell.h  Chunk.h  MAPLoader.cpp  MAPLoader.h  MapExtracter.cpp  MapExtracter.h  MapExtractor.cpp  MapExtractor.h  MapObject.h  MapObjectRoot.h  WDT.cpp  WDT.h
extractor/MPQ/: MPQFile.h  MPQFileJobBatch.cpp  MPQFileJobBatch.h  MPQHandler.h  MPQLoader.cpp  MPQLoader.h
extractor/Utils/: ChunkUtils.h  DBCReader.cpp  DBCReader.h  FileChunkUtils.h  JobBatch.cpp  JobBatch.h  JobBatchRunner.cpp  JobBatchRunner.h  MPQLoader.cpp  MPQLoader.h  NormalCompression.h  ServiceLocator.cpp  ServiceLocator.h
shadercookerstandalone/: CMakeLists.txt  main.cpp
(+154 files in other folders)
